# pdf-bookmark

./: .gitignore  README.md  build.gradle  config.toml  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
pdf_bookmark/: __init__.py  cli.py  core.py  gui.py
pdf_bookmark/tests/: test_core.py
src/main/java/com/ifnoelse/pdf/: PDFUtil.java
src/test/java/test/: DirectoryRecognitionTest.java
tocsmith/: __init__.py  cli.py  core.py  gui.py
tocsmith/tests/: test_core.py
